--- a/Young_Mens_Calendar/WebContent/jsonAjax.html
+++ b/Young_Mens_Calendar/WebContent/jsonAjax.html
@@ -10,21 +10,35 @@
 <script>
 
 	$(document).ready(function() {
-		$('#calendar').fullCalendar({
-			header: {
-				left: 'prev,next today',
-				center: 'title',
-				right: 'month,agendaWeek,agendaDay'
-			},
-			editable: true,
-			eventLimit: true, // allow "more" link when too many events
-			eventSources: [
-			    '/Young_Mens_Calendar/web/calendar'
-			],
-			loading: function(bool) {
-				$('#loading').toggle(bool);
-			}
-		});
+		$.ajax({
+            type: "GET",
+            data_type: "json",
+            url: "Young_Mens_Calendar/web/calendar",
+            success: function(data) {
+		    $('#calendar').fullCalendar({
+			    header: {
+			   	    left: 'prev,next today',
+				    center: 'title',
+				    right: 'month,agendaWeek,agendaDay'
+			    },
+			    editable: true,
+			    eventLimit: true, // allow "more" link when too many events
+			    events: $.map(data.d, function(item, i) {
+                    var event = new Object();
+                    event.id = item.calendarId;
+                    event.start = new Date(item.startDateTime);
+                    event.end = new Date(item.endDateTime);
+                    event.title = item.title;
+                    return event;
+                })
+		    });
+		    $('#loading').hide();
+            $('#calendar').show();
+        
+        },
+        error: function(XMLHttpRequest, textStatus, errorThrown) {
+            debugger;
+        }
 	});
 
 </script>
