--- a/Young_Mens_Calendar/WebContent/index.html
+++ b/Young_Mens_Calendar/WebContent/index.html
@@ -17,7 +17,7 @@
 <script>
 
 	$(document).ready(function() {
-		
+		$("#eventContent").hide();
 		$("#dtBox").DateTimePicker();
 		var zone = "-08:00"
 		var calendar = $('#calendar').fullCalendar({
@@ -97,14 +97,12 @@
 			$("#startDateTime").hide();
 			$("#endDate").show();
 			$("#endDateTime").hide();
-			allDay = true;
 			endDate = '';
 		} else {
 			$("#startDate").hide();
 			$("#startDateTime").show();
 			$("#endDate").hide();
 			$("#endDateTime").show();
-			allDay = false;
 		}
 		$("#allDayCheck").prop("checked", allDay);
 		//$("#startDate").datepicker().datepicker('setDate', formatDate);
@@ -112,6 +110,7 @@
 			date = new Date(event.end);
 			formatDate = date.getMonth() + 1 + '/' + date.getDate() + '/' + date.getFullYear();
 		}
+		$("#eventContent").hide();
         $("#eventContent").dialog(
             { 
             	modal: true,
@@ -121,11 +120,37 @@
                        text: "Ok",
                        click: function() {
                     	   
-                    	   var date = new Date(document.getElementById("startDateInput").value);
-                   		   var formatDate = date.getFullYear() + '-' + (date.getMonth() + 1) + '-' + date.getDate() + 'T00:00:00.000Z';
+                    	   var checkedValue = $('#allDayCheck:checked').val();
+                    	   if (checkedValue) {
+                    		   checkedValue = true;
+                    		   startDate = $('#startDateInput').val();
+                    		   endDate = $('#endDateInput').val();
+                    		   //var date = new Date(document.getElementById("startDateInput").value);
+                       		   //var formatStartDate = date.getFullYear() + '-' + (date.getMonth() + 1) + '-' + date.getDate() + 'T00:00:00.000Z';
+                       		   //date = new Date(document.getElementById("endDateInput").value);
+                       		   //if (date) {
+                       		   //    endDate = date.getFullYear() + '-' + (date.getMonth() + 1) + '-' + date.getDate() + 'T00:00:00.000Z';
+                       		   //} else }
+                    		   //    endDate = '';
+                    		   //}
+                   		   } else {
+                   			   checkedValue = false;
+                   			   startDate = $('#startDateTimeInput').val();
+                   			   endDate = $('#endDateTimeInput').val();
+                   			//var date = new Date(document.getElementById("startDateTimeInput").value);
+                    		   //var formatStartDate = date.getFullYear() + '-' + (date.getMonth() + 1) + '-' + date.getDate() + ' ' + date.getHours() + ':' + date.getMinutes();
+                    		   //date = new Date(document.getElementById("endDateTimeInput").value);
+                       		   //if (date) {
+                       		   //    endDate = date.getFullYear() + '-' + (date.getMonth() + 1) + '-' + date.getDate() + ' ' + date.getHours() + ':' + date.getMinutes();
+                       		   //} else }
+                   			//    endDate = '';
+                   			// }
+                   		   }
+                    	   alert(checkedValue);
                     	   
                     	   var title = document.getElementById("titleText").value;
-                    	   postEvent(title, formatDate, endDate, allDay);
+                    	   var description = document.getElementById("descriptionText").value;
+                    	   postEvent(title, startDate, endDate, checkedValue, description);
                	           $('#calendar').fullCalendar('unselect');
                            $( this ).dialog( "close" );
                        }
@@ -144,9 +169,9 @@
 		//set the values and open the modal
 		$("#titleText").val(event.title);
 		var date = new Date(event.start);
-		var formatDate = (date.getMonth() + 1) + '-' + (date.getDate() + 1) + '-' + date.getFullYear();
-		var formatTime = date.getHours() + ':' + date.getMinutes();
+		alert(event.start)
 		if (event.allDay) {
+			var formatDate = (date.getMonth() + 1) + '-' + (date.getDate() + 1) + '-' + date.getFullYear();
 			$("#startDateInput").val(formatDate);
 			$("#startDate").show();
 			$("#startDateTime").hide();
@@ -155,6 +180,8 @@
 			allDay = true;
 			endDate = '';
 		} else {
+			var formatDate = (date.getMonth() + 1) + '-' + date.getDate() + '-' + date.getFullYear();
+			var formatTime = date.getHours() + ':' + date.getMinutes();
 			$("#startDateTimeInput").val(formatDate + ' ' + formatTime);
 			$("#startDate").hide();
 			$("#startDateTime").show();
@@ -169,6 +196,7 @@
 			formatDate = date.getMonth() + 1 + '-' + date.getDate() + '-' + date.getFullYear();
 		}
 		$("#descriptionText").val(event.description);
+		$("#eventContent").hide();
         $("#eventContent").dialog(
             { 
             	modal: true,
@@ -207,7 +235,7 @@
            });
 	}
 	
-	function postEvent (title, startDate, endDate, allDay) {
+	function postEvent (title, startDate, endDate, allDay, description) {
 		var endString = '';
 		if (endDate) {
 			endString = '"end": "' + endDate + '", ';
@@ -216,10 +244,10 @@
 	    + '"start": "' + startDate + '", '
 	    + endString
 	    + '"allDay": "' + allDay + '", '
-	    + '"location": "' + "Some location" + '", '
-	    + '"description": "' + "Some description" + '", '
-	    + '"editable": true }';
-		alert("In post event: " + dataString);
+	    //+ '"location": "' + "Some location" + '", '
+	    //+ '"description": "' + "Some description" + '", '
+	    + '"editable": false }';
+		//alert("In post event: " + dataString);
 		if (title) {
 			$.ajax({
 				url: '/Young_Mens_Calendar/web/calendar',
@@ -231,7 +259,7 @@
 				    $('#calendar').fullCalendar('refetchEvents');
 				},
 				error: function(response) {
-					alert(response.responseText);
+					alert('Failed to post ' + dataString + '\n' + response.responseText);
 				}
 			});
 	    }
@@ -239,40 +267,38 @@
 
 </script>
 <style>
-
-	body {
-		margin: 0;
-		padding: 0;
-		font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
-		font-size: 14px;
-	}
-
-	#script-warning {
-		display: none;
-		background: #eee;
-		border-bottom: 1px solid #ddd;
-		padding: 0 10px;
-		line-height: 40px;
-		text-align: center;
-		font-weight: bold;
-		font-size: 12px;
-		color: red;
-	}
-
-	#loading {
-		display: none;
-		position: absolute;
-		top: 100px;
-		right: 100px;
-	}
-
-	#calendar {
-		max-width: 900px;
-		margin: 40px auto;
-		padding: 0 10px;
-	}
+body {
+	margin: 0;
+	padding: 0;
+	font-family: "Lucida Grande", Helvetica, Arial, Verdana, sans-serif;
+	font-size: 14px;
 }
 
+#script-warning {
+	display: none;
+	background: #eee;
+	border-bottom: 1px solid #ddd;
+	padding: 0 10px;
+	line-height: 40px;
+	text-align: center;
+	font-weight: bold;
+	font-size: 12px;
+	color: red;
+}
+
+#loading {
+	display: none;
+	position: absolute;
+	top: 100px;
+	right: 100px;
+}
+
+#calendar {
+	max-width: 900px;
+	margin: 40px auto;
+	padding: 0 10px;
+}
+}
 </style>
 </head>
 <body>
@@ -280,36 +306,33 @@
 	<div id='loading'>loading...</div>
 
 	<div id='calendar'></div>
-	
+
 	<div id="eventContent" title="Event Details">
-	<div>
-	Title:
-	<input id="titleText" type="text" >
+		<div>
+			Title: <input id="titleText" type="text">
+		</div>
+		All Day: <input id="allDayCheck" type="checkbox" onclick="showMe()">
+		<div id="startDate">
+			Start Date: <input id="startDateInput" type="text" data-field="date"
+				data-format="MM-dd-yyyy" readonly>
+		</div>
+		<div id="startDateTime">
+			Start Date: <input id="startDateTimeInput" type="text"
+				data-field="datetime" data-format="MM-dd-yyyy HH:mm:ss" readonly>
+		</div>
+		<div id="endDate">
+			End Date: <input id="endDateInput" type="text" data-field="date"
+				data-format="MM-dd-yyyy" readonly>
+		</div>
+		<div id="endDateTime">
+			End Date: <input id="endDateTimeInput" type="text"
+				data-field="datetime" data-format="MM-dd-yyyy HH:mm:ss" readonly>
+		</div>
+		<div id="dtBox"></div>
+		<div id="eventInfo">
+			Description: <input id="descriptionText" type="text">
+		</div>
 	</div>
-	All Day:
-	<input id="allDayCheck" type="checkbox" onclick="showMe()" >
-	<div id="startDate" >
-	    Start Date:
-	    <input id="startDateInput" type="text" data-field="date" data-format="MM-dd-yyyy" readonly>
-	</div>
-	<div id="startDateTime" >
-	    Start Date:
-	    <input id="startDateTimeInput" type="text" data-field="datetime" data-format="MM-dd-yyyy HH:mm:ss" readonly>
-	</div>
-	<div id="endDate" >
-	    End Date:
-	    <input id="endDateInput" type="text" data-field="date" data-format="MM-dd-yyyy" readonly>
-	</div>
-	<div id="endDateTime" >
-	    End Date:
-	    <input id="endDateTimeInput" type="text" data-field="datetime" data-format="MM-dd-yyyy HH:mm:ss" readonly>
-	</div>
-	<div id="dtBox"></div>
-    <div id="eventInfo">
-        Description:
-        <input id="descriptionText" type="text" >
-    </div>
-</div>
 
 </body>
 </html>
